2004-12-08  Ben Elliston  <bje@au.ibm.com>

	* doc/Makefile.am (config.texi): Emit a @set UPDATED command to
	config.texi whose value is the current month and year.
	* doc/Makefile.in: Rebuild.
	* doc/binutils.texi: Set the document subtitle to be the value of
	the Texinfo UPDATED variable (obtained from config.texi).

2004-12-07  Ben Elliston  <bje@au.ibm.com>

	PR binutils/249
	* doc/binutils.texi (def file format): New node.
	(dlltool): Use the tool name as the @chapter name, like all the
	other binutils.  Use @file{.def} throughout for consistency.

2004-12-06  Ben Elliston  <bje@au.ibm.com>

	* dlltool.c: Comment fix.

2004-12-06  Ben Elliston  <bje@au.ibm.com>

	* doc/binutils.texi: Update copyright years.

2004-12-03  Richard Sandiford  <rsandifo@redhat.com>

	* MAINTAINERS: Remove mention of config.if.

2004-11-30  Tero Niemela  <tero_niemela@yahoo.com>

	* Makefile.am: Change LOCALEDIR to $(datadir)/share.
	* Makefile.in: Regenerate.

2004-11-10  Ian Lance Taylor  <ian@wasabisystems.com>

	PR binutils/536
	* stabs.c (stab_demangle_template): Call stab_demangle_count
	rather than stab_demangle_get_count to get the length of a pointer
	target.

2004-11-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* defparse.y: Remove unnecessary commas from token list.

2004-11-08  Aaron W. LaFramboise <aaron98wiridge9@aaronwl.com>

	* doc/binutils.texi (nm): Update description of weak symbols.

2004-11-03  Nick Clifton  <nickc@redhat.com>

	* readelf.c (do_debug_ranges): New variable.
	(usage): Document new switch: -wR or --debug-dump=Ranges.
	(parse_args): Handle new switch.  Replace switch statement for the
	long options with a more compact table structure.
	(process_section_headers): Allow the dumping of .debug_ranges
	sections if so requested.
	(debug_displays): Likewise.
	(load_debug_range): New function: Grabs the contents of a
	.debug_ranges section.
	(free_debug_range): New function: Releases the grabbed
	.debug_ranges section.