@@ -1,7 +1,7 @@
 %{
 /* arlex.l - Strange script language lexer */
 
-/*   Copyright 1992, 1997, 2000, 2002, 2003 Free Software Foundation, Inc.
+/* Copyright 1992, 1997, 2000, 2002, 2003 Free Software Foundation, Inc.
 
 This file is part of GNU Binutils.
 
@@ -20,10 +20,8 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
 
-/* Contributed by Steve Chamberlain
-   		  sac@cygnus.com
+/* Contributed by Steve Chamberlain <sac@cygnus.com>.  */
 
-*/
 #define DONTDECLARE_MALLOC
 #include "ansidecl.h"
 #include "libiberty.h"
